# custom_srvs_demo

./: CMakeLists.txt  package.xml
srv/: StopCmd.srv
srv/akinator/: AkinatorAnswer.srv  AkinatorCmd.srv  AkinatorResult.srv  AkinatorStart.srv
srv/behaviours/: BehaviourList.srv  HeadBehaviourCmd.srv  LedBehaviourCmd.srv
srv/console/: Logger.srv
srv/control/: HeadCmd.srv
srv/launcher/: StartCmd.srv
srv/monitoring/: SystemInfo.srv
srv/process/: SetParam.srv
srv/rtc/: ActionRTC.srv
srv/socket/: ConnectIO.srv  StateIO.srv
srv/state_machine/: GetState.srv  Transition.srv
srv/stt/: STTCmd.srv
srv/supervisor/: AppCmdList.srv  AppList.srv  GetProcesses.srv  GetServices.srv  ProcessList.srv  RunCmd.srv  ServiceList.srv  SetProcessParam.srv  StartService.srv  StopService.srv
srv/tts/: TTSCmd.srv
