<?xml version="1.0"?>
<package>
  <name>custom_srvs</name>
  <version>0.0.0</version>
  <description>The custom_srvs package</description>

  <maintainer email="mahmoud.ghorbel@hotmail.com">MG</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>

</package>
